--- a/src/app/View/pages/login/login.component.html
+++ b/src/app/View/pages/login/login.component.html
@@ -30,14 +30,14 @@
         <form class="space-y-4 md:space-y-6" [formGroup]="signInForm" (ngSubmit)="onSubmit()">
           <div>
             <label
-              for="email"
+             
               class="block mb-2 text-sm font-medium text-gray-900 "
               >Your email</label
             >
             <input
               type="email"
               formControlName="email"
-              id="email"
+              
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 "
               placeholder="name@company.com"
               required=""
@@ -45,14 +45,14 @@
           </div>
           <div>
             <label
-              for="password"
+              
               class="block mb-2 text-sm font-medium text-gray-900 "
               >Password</label
             >
             <input
               type="password"
               formControlName="password"
-              id="password"
+              
               placeholder="••••••••"
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
               required=""
@@ -62,7 +62,7 @@
             <div class="flex items-start">
               <div class="flex items-center h-5">
                 <input
-                  id="remember"
+            
                   aria-describedby="remember"
                   type="checkbox"
                   class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300"
@@ -70,7 +70,7 @@
                 />
               </div>
               <div class="ml-3 text-sm">
-                <label for="remember" class="text-gray-500 "
+                <label class="text-gray-500 "
                   >Remember me</label
                 >
               </div>
