feat/ delete column functionality restriction

--- a/src/app/View/components/sidebar/sidebar.component.html
+++ b/src/app/View/components/sidebar/sidebar.component.html
@@ -10,7 +10,7 @@
   <p
     class="text-slate-400 pl-7 font-bold uppercase text-[0.75rem] tracking-[0.1rem]"
   >
-    All boards(3)
+    All boards({{boards.length}})
   </p>
 
   <ul class="mt-5">
