--- a/src/app/View/modals/add-column/add-column.component.html
+++ b/src/app/View/modals/add-column/add-column.component.html
@@ -68,7 +68,9 @@
 
             <svg
             (click)="dataService.deleteColumn(crudService.getBoardName() || crudService.initialBoardName, column.name)"
-              class="w-8 h-8 mt-2 text-gray-400 cursor-pointer hover:opacity-70"
+              class="w-8 h-8 mt-2 text-gray-400 cursor-pointer"
+              [ngClass]="{'text-gray-600 opacity-60 hover:opacity-30': column.tasks?.length === 0, 'text-gray-600': column.tasks?.length !== 0}"
+              fill="currentColor"
               aria-hidden="true"
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
