--- a/src/app/View/modals/add-board/add-board.component.html
+++ b/src/app/View/modals/add-board/add-board.component.html
@@ -45,13 +45,13 @@
             />
           </div>
 
-          <div class="col-span-2">
+          <!-- <div class="col-span-2">
             <app-multi-input-box
               [label]="'Columns'"
               [buttonName]="'Add Column'"
               [isDeleteSvgShown]="false"
             />
-          </div>
+          </div> -->
         </div>
 
         <button
