--- a/src/app/View/modals/add-task/add-task.component.html
+++ b/src/app/View/modals/add-task/add-task.component.html
@@ -59,13 +59,13 @@
             ></textarea>
           </div>
 
-          <div class="col-span-2">
+          <!-- <div class="col-span-2">
             <app-multi-input-box
               [label]="'Subtasks'"
               [buttonName]="'Add Subtask'"
               [isDeleteSvgShown]="true"
             />
-          </div>
+          </div> -->
 
           <app-task-dropdown [label]="'Status'" class="col-span-2" />
         </div>
